--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-fastapi==0.115.0
-uvicorn==0.30.6
-python-telegram-bot==13.15
-playwright==1.46.0
+fastapi==0.115.*
+uvicorn[standard]==0.30.*
+python-telegram-bot==20.7   # ВАЖНО: v20+
+playwright==1.47.*
+httpx==0.27.*
